--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,17 @@
 {
-  "cSpell.language": "en,it,it-IT",
-  "cSpell.words": ["rototraslatorio"],
   // Latex
   "[latex]": {
     "editor.defaultFormatter": "James-Yu.latex-workshop"
   },
+  "cSpell.language": "en,it,it-IT",
+  "cSpell.words": ["rototraslatorio"],
+  "latex-utilities.message.update.show": false,
+  "latex-workshop.bibtex-format.trailingComma": true,
+  "latex-workshop.chktex.enabled": true,
+  // Latex - End
   "latex-workshop.docker.enabled": true,
   "latex-workshop.docker.image.latex": "micheleforese/latex:full",
-  "latex-workshop.latex.outDir": "./build",
   "latex-workshop.latex.autoBuild.cleanAndRetry.enabled": false,
-  "latex-workshop.synctex.afterBuild.enabled": true,
-
-  "latex-workshop.bibtex-format.trailingComma": true,
-
-  "latex-utilities.message.update.show": false,
-  "latex-workshop.chktex.enabled": true
-  // Latex - End
+  "latex-workshop.latex.outDir": "./build",
+  "latex-workshop.synctex.afterBuild.enabled": true
 }
